--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/nikolai4D/integration#readme",
   "dependencies": {
+    "axios": "^1.2.0",
     "express": "^4.18.2"
   }
 }
